; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snappy.c_ff_snappy_peek_uncompressed_length.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snappy.c_ff_snappy_peek_uncompressed_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SEEK_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_snappy_peek_uncompressed_length(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @bytestream2_get_bytes_left(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @decode_len(i32* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* %3, align 4
  %11 = sub nsw i32 0, %10
  %12 = load i32, i32* @SEEK_END, align 4
  %13 = call i32 @bytestream2_seek(i32* %9, i32 %11, i32 %12)
  %14 = load i32, i32* %4, align 4
  ret i32 %14
}

declare dso_local i32 @bytestream2_get_bytes_left(i32*) #1

declare dso_local i32 @decode_len(i32*) #1

declare dso_local i32 @bytestream2_seek(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
